[package]
name = "jsx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jsx"
path = "src/jsx_params.rs"

[[bin]]
name = "jsx_template"
path = "src/jsx_template.rs"

[[bin]]
name = "ts_imports"
path = "src/ts_imports.rs"

[dependencies]
thiserror = "1.0.62"
tree-sitter = "0.22.6"
tree-sitter-javascript = "0.21.4"
